pxc/tests/test_003_interface/inh_match2.px
public namespace inh_match2;
import core::common -;

interface ifoo {
  public function void m() const;
}

struct foo < ifoo > {
  public function void m() { println("foo"); } // error: constness
}

function void t1() {
  ptr{ifoo} p = make_ptr(foo());
  p->m();
}

t1();
